[package]
name = "postgis_diesel"
version = "3.0.1"
authors = ["Vitaly Merenkov <vmrnkv@gmail.com>"]
edition = "2018"
description = "An extension for Diesel framework to support PostGIS geometry datatype."
homepage = "https://github.com/vitaly-m/postgis-diesel"
repository = "https://github.com/vitaly-m/postgis-diesel"
readme = "README.md"
keywords = ["PostGIS", "GIS", "GEO", "Diesel"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel.git", rev = "2cf1642d69a699ddefaa15fabc2d58e37670a735", optional = true}
byteorder = "1.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
schemars = { version = "0.8.20", optional = true }

[dev-dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel.git", rev = "2cf1642d69a699ddefaa15fabc2d58e37670a735" }
dotenvy = "0.15"
serde_json = "1.0"

[features]
default = ["postgres"]
serde = ["dep:serde"]
serde_geojson = ["serde"]
schemars = ["dep:schemars"]
diesel = ["dep:diesel"]
postgres = ["diesel", "diesel/postgres"]
sqlite = ["diesel", "diesel/sqlite"]
